fix broken css and add player switcher

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,12 +86,15 @@ body {
     background-color: white;
 }
 
-#player1, #player2, #player3, #player4 {
+.player1, .player2, .player3, .player4 {
     width : 240px;
     float: left;
     text-align: center;
     background-color: white;
     font-weight: bold;
+}
+
+.player1, .player2, .player3 {
     border-right: solid black 1px;
 }
 
@@ -111,3 +114,7 @@ h1 {
 }
 
 .hidden {display: none}
+
+.body {background-color: white;
+    margin-top: 150px;
+}
